--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -136,10 +136,7 @@
                     <a class="nav-link in-active" href="/admin/transactionHistory"><i class="fas fa-history"></i> Transaction history</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link in-active" href="/admin/addMensProduct"><i class="bi bi-bag-plus-fill"></i> Add mens product</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link in-active" href="/admin/addWomensProduct"><i class="bi bi-bag-plus-fill"></i> Womens product</a>
+                    <a class="nav-link in-active" href="/admin/addProducts"><i class="bi bi-bag-plus-fill"></i> Add mens product</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link in-active" href="/admin/couponsHistory"><i class="fas fa-ticket-alt"></i> Coupons history</a>
